--- a/src/pages/Gala/home2.css
+++ b/src/pages/Gala/home2.css
@@ -3,7 +3,43 @@ div.over{
     height: 796px;
     position:relative;
     bottom:140px;
-    background: linear-gradient(110.05deg, rgba(0, 0, 0, 0.6) -16.93%, rgba(0, 0, 0, 0) 109.91%, rgba(0, 0, 0, 0) 109.92%);
+   
+} 
+img.ggg2{
+    width: 1440px;
+    height: 796px;
+    position:relative;  
+    border-radius: 5px;
+}
+img.max{
+    width: 400px;
+    height: 280px;
+    position:relative;
+    border-radius: 8px;
+}
+img.sdm{
+    width: 400px;
+    height: 280px;
+    position:relative;  
+    border-radius: 8px;
+}
+img.fresh{
+    width: 400px;
+    height: 280px;
+    position:relative;
+    border-radius: 8px;
+}
+img.lol1{
+    width: 192px;
+height: 280px;
+border-radius: 5px;
+
+}
+img.lol2{
+    
+    border-radius: 50%;
+    height: 180px;
+    width: 180px;
 }
 p.over1{
     width: 1024px;
@@ -15,9 +51,9 @@ line-height: 77px;
 letter-spacing: 0.003em;
 text-align:left;
 margin: 0px;
-    top: 235px;
+    bottom: 680px;
     position: relative;
-    left: 200px;
+    left: 375px;
 }
 button.buttan1{
     border-radius: 8px;
@@ -37,8 +73,8 @@ button.over2{
     width:  198px;
     height:48px;
     position:relative;
-    top:285px;
-    left:200px;
+    bottom:630px;
+    left:375px;
 }
 /* --------------------------------- */
 div.tional{
@@ -48,13 +84,14 @@ position:relative;
 left:90px;
 display:inline-flex;
 bottom:30px;
+
 }
 div.tional1{
     width: 400px;
 height: 280px;
 position:relative;
 border-radius: 8px;
-background: rgba(0, 0, 0, 0.4);
+
 }
 div.tional2{
     width: 400px;
@@ -62,8 +99,6 @@ height: 280px;
 left:29px;
 position:relative;
 border-radius: 8px;
-background: rgba(0, 0, 0, 0.4);
-
 }
 div.tional3{
     width: 400px;
@@ -71,31 +106,31 @@ height: 280px;
 left:57px;
 position:relative;
 border-radius: 8px;
-background: rgba(0, 0, 0, 0.4);
 }
 p.tio{
 width: 304px;
 height: 58px;
 position:relative;
 left:60px;
-top:100px;
-font-size: 24px;
+bottom:190px;
+font-size: 26px;
 font-weight: 700;
 line-height: 29px;
 letter-spacing: 0.003em;
 text-align: left;
-color: rgba(255, 255, 255, 1);
+color: rgb(16, 15, 15);
+font-weight: bold;
 }
 p.tio1{
 font-size: 16px;
 font-weight: 600;
 line-height: 19px;
 letter-spacing: 0.005em;
-text-align: left;
 position:relative;
 left:60px;
-top:110px;
-color: rgba(255, 255, 255, 1);
+bottom:200px;
+font-weight: bold;
+color: rgb(12, 12, 12);
 }
 div.reandpe6{
     width: 1260px;
